--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# My stuff
+ai-butler/
+data_files/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,7 +131,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-ai-butler/
 
 # Spyder project settings
 .spyderproject
